--- a/clf_emailspam.ipynb
+++ b/clf_emailspam.ipynb
@@ -21,18 +21,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import pandas as pd\n",
@@ -54,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -86,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 4,
    "metadata": {
     "scrolled": false
    },
@@ -148,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +194,7 @@
        "2  [congratulations, xclaim, you, get, a, free, h...     1"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +240,7 @@
        " ('xlsquareb', 59)]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -328,7 +319,7 @@
        "4  [skateboarder, drives, xhyphen, through, subwa...     0"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -355,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -373,7 +364,7 @@
        " ('xslash', 264)]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -385,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +385,7 @@
        "['xdot', 'xdigit', 'xclaim', 'xcomma', 'xhyphen']"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -411,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -420,7 +411,7 @@
        "['xcomma', 're', 'xdot', 'xlsquareb', 'xrsquareb']"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -476,7 +467,7 @@
        " 'you'}"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -502,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -520,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -535,7 +526,7 @@
        "        0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -549,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -564,7 +555,7 @@
        "        0., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -643,7 +634,7 @@
        "1994  [forged, documents, xcomma, public, drinking, ...     0  [[1.0, 0.0, 0.0, 1.0, 0.0, 0.0, 0.0, 0.0, 0.0,..."
       ]
      },
-     "execution_count": 39,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -661,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -680,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -695,7 +686,7 @@
        "       [0., 0., 0., ..., 0., 0., 0.]])"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -706,7 +697,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -718,7 +709,7 @@
        "    tol=0.001, verbose=False)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -732,7 +723,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -741,7 +732,7 @@
        "0.8799275033982782"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -768,6 +759,85 @@
    ],
    "source": [
     "clf.score(Xtest3, ytest)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Slightly unbalanced data (spam : ham ratio is 1 : 5). check false positive, false negative"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 114,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training set has 353 spam emails, in which 75.07 % are false negative (not classified as spam).\n",
+      "Training set has 1854 ham emails, in which 0.00 % are false positive (classified as spam).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# false negative - if it is spam, not detected as spam\n",
+    "ypred = clf.predict(X3)\n",
+    "yspamind = y == 1\n",
+    "ypred_forspam = ypred[yspamind]\n",
+    "num_spam = ypred_forspam.shape[0]\n",
+    "\n",
+    "falseNeg = len(np.where(ypred_forspam == 0)[0])/num_spam*100\n",
+    "print( \"Training set has %d spam emails\" % num_spam, end=\"\")\n",
+    "print( \", in which %.2f %% are false negative (not classified as spam).\" % falseNeg )\n",
+    "\n",
+    "# false positive - if it is not spam, but detected as spam - this is undesired.\n",
+    "ypred = clf.predict(X3)\n",
+    "yhamind = y == 0\n",
+    "ypred_forham = ypred[yhamind]\n",
+    "num_ham = ypred_forham.shape[0]\n",
+    "\n",
+    "falsePos = len(np.where(ypred_forham == 1)[0])/num_ham\n",
+    "print( \"Training set has %d ham emails\" % num_ham, end=\"\")\n",
+    "print( \", in which %.2f %% are false positive (classified as spam).\" % falsePos )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 115,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Test set has 150 spam emails, in which 76.00 % are false negative (not classified as spam).\n",
+      "Test set has 797 ham emails, in which 0.00 % are false positive (classified as spam).\n"
+     ]
+    }
+   ],
+   "source": [
+    "# false negative in testset - if it is spam, not detected as spam\n",
+    "ypred_test = clf.predict(Xtest3)\n",
+    "yspamind_test = ytest == 1\n",
+    "ypred_forspam_test = ypred_test[yspamind_test]\n",
+    "num_spam_test = ypred_forspam_test.shape[0]\n",
+    "\n",
+    "falseNeg_test = len(np.where(ypred_forspam_test == 0)[0])/num_spam_test*100\n",
+    "print( \"Test set has %d spam emails\" % num_spam_test, end=\"\")\n",
+    "print( \", in which %.2f %% are false negative (not classified as spam).\" % falseNeg_test )\n",
+    "\n",
+    "# false positive - if it is not spam, but detected as spam - this is undesired.\n",
+    "ypred_test = clf.predict(Xtest3)\n",
+    "yhamind_test = ytest == 0\n",
+    "ypred_forham_test = ypred_test[yhamind_test]\n",
+    "num_ham_test = ypred_forham_test.shape[0]\n",
+    "\n",
+    "falsePos_test = len(np.where(ypred_forham_test == 1)[0])/num_ham_test\n",
+    "print( \"Test set has %d ham emails\" % num_ham_test, end=\"\")\n",
+    "print( \", in which %.2f %% are false positive (classified as spam).\" % falsePos_test )"
    ]
   },
   {
